--- a/public/style/main.css
+++ b/public/style/main.css
@@ -9,3 +9,43 @@ html, body, div, section, input, aside {
 	font-family: 'Roboto Condensed', sans-serif;
 }
 */
+body {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #eee;
+}
+.signin {
+	float: right;
+}
+.signin .form-signin {
+  padding: 15px;
+}
+.signin .form-signin .form-signin-heading,
+.form-signin .checkbox {
+  margin-bottom: 10px;
+}
+.signin .form-signin .checkbox {
+  font-weight: normal;
+}
+.signin .form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.signin .form-signin .form-control:focus {
+  z-index: 2;
+}
+.signin .form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.signin .form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
