--- a/public/style/_login.sass
+++ b/public/style/_login.sass
@@ -1,25 +1,30 @@
 .signin
   float: right
+
   .form-signin
     padding: 15px
+
     .form-signin-heading,.checkbox
       margin-bottom: 10px
+
     checkbox
       font-weight: normal
+
     .form-control
       position: relative
       height: auto
-      -webkit-box-sizing: border-box
-      -moz-box-sizing: border-box
-      box-sizing: border-box
+      @include box-sizing(border-box)
       padding: 10px
       font-size: 16px
+
       &:focus
         z-index: 2
+
     input[type="email"]
       margin-bottom: -1px
       border-bottom-right-radius: 0
       border-bottom-left-radius: 0
+
     [type="password"]
       margin-bottom: 10px
       border-top-left-radius: 0
