Commented some useless lines in the SASS files

--- a/public/style/style.sass
+++ b/public/style/style.sass
@@ -7,7 +7,7 @@
 html, body, div, section, input, aside 
   font-family: 'Roboto', sans-serif
 
-.robocon
+//.robocon
   font-family: 'Roboto Condensed', sans-serif
 
 body 
