--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,63 +1,77 @@
 #inner-panel {
   border: 1px solid #ddd;
   border-top: none; }
-  #inner-panel #client-list .panel {
-    border: none; }
-    #inner-panel #client-list .panel + .panel {
-      margin-top: 0px; }
-    #inner-panel #client-list .panel:first-child .panel-title .list-group-item:first-child {
-      border-top-width: 1px;
-      border-top-left-radius: 4px;
-      border-top-right-radius: 4px; }
-    #inner-panel #client-list .panel:last-child .panel-title .list-group-item:last-child {
-      border-bottom-width: 1px;
-      border-bottom-left-radius: 4px;
-      border-bottom-right-radius: 4px; }
-    #inner-panel #client-list .panel:last-child .panel-title .list-group-item[aria-expanded="true"] {
-      border-radius: 0px; }
-    #inner-panel #client-list .panel .panel-title .list-group-item {
-      border-top-left-radius: 0px;
-      border-top-right-radius: 0px;
-      border-bottom-left-radius: 0px;
-      border-bottom-right-radius: 0px;
-      border-top-width: 0px; }
-    #inner-panel #client-list .panel .panel-collapse .list-group {
-      border-color: #dddddd; }
-      #inner-panel #client-list .panel .panel-collapse .list-group:last-child .list-group-item:last-child {
-        border-bottom: 1px solid #ddd;
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px; }
-      #inner-panel #client-list .panel .panel-collapse .list-group .list-group-item {
-        border-width: 0px 1px 1px 1px;
-        border-radius: 0px; }
+#inner-panel #client-list .panel {
+  border: none; }
+#inner-panel #client-list .panel + .panel {
+  margin-top: 0px; }
+#inner-panel #client-list .panel:first-child .panel-title .list-group-item:first-child {
+  border-top-width: 1px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px; }
+#inner-panel #client-list .panel:last-child .panel-title .list-group-item:last-child {
+  border-bottom-width: 1px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px; }
+#inner-panel #client-list .panel:last-child .panel-title .list-group-item[aria-expanded="true"] {
+  border-radius: 0px; }
+#inner-panel #client-list .panel .panel-title .list-group-item {
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-top-width: 0px; }
+#inner-panel #client-list .panel .panel-collapse .list-group {
+  border-color: #dddddd; }
+#inner-panel #client-list .panel .panel-collapse .list-group:last-child .list-group-item:last-child {
+  border-bottom: 1px solid #ddd;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px; }
+#inner-panel #client-list .panel .panel-collapse .list-group .list-group-item {
+  border-width: 0px 1px 1px 1px;
+  border-radius: 0px; }
+
+.rate {
+  display: inline-block;
+  min-width: 10px;
+  padding: 3px 7px;
+  font-weight: bold;
+  color: #090;
+  line-height: 1;
+  vertical-align: middle;
+  white-space: nowrap;
+  text-align: center; }
+
+.list-group-item > .rate {
+  float: right; }
 
 /* Signin */
 .signin {
   float: right; }
-  .signin .form-signin {
-    padding: 15px; }
-    .signin .form-signin .form-signin-heading, .signin .form-signin .checkbox {
-      margin-bottom: 10px; }
-    .signin .form-signin checkbox {
-      font-weight: normal; }
-    .signin .form-signin .form-control {
-      position: relative;
-      height: auto;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      box-sizing: border-box;
-      padding: 10px;
-      font-size: 16px; }
-      .signin .form-signin .form-control:focus {
-        z-index: 2; }
-    .signin .form-signin input[type="email"] {
-      margin-bottom: -1px;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0; }
-    .signin .form-signin [type="password"] {
-      margin-bottom: 10px;
-      border-top-left-radius: 0;
-      border-top-right-radius: 0; }
+.signin .form-signin {
+  padding: 15px; }
+.signin .form-signin .form-signin-heading, .signin .form-signin .checkbox {
+  margin-bottom: 10px; }
+.signin .form-signin checkbox {
+  font-weight: normal; }
+.signin .form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px; }
+.signin .form-signin .form-control:focus {
+  z-index: 2; }
+.signin .form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0; }
+.signin .form-signin [type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0; }
 
 .nav li a {
   text-shadow: 1px 1px #ccc; }
@@ -72,9 +86,14 @@ footer {
   height: 60px;
   background-color: #f5f5f5;
   border: 1px solid #e7e7e7; }
-  footer p {
-    padding-top: 20px;
-    text-align: center; }
+footer p {
+  padding-top: 20px;
+  text-align: center; }
+
+#edit-account form {
+  margin-bottom: 0em; }
+#edit-account input.btn, #edit-account a.btn {
+  min-width: 150px; }
 
 /* main css for timesheets */
 html, body, div, section, input, aside {
