Added billable checkbox to timesheet input table and added a custom style

--- a/public/style/style.sass
+++ b/public/style/style.sass
@@ -3,6 +3,7 @@
 @import "mixins"
 @import "variables"
 @import "timesheet-admin"
+@import "timesheet-home"
 @import "login"
 @import "header"
 @import "footer"
