--- a/public/style/_timesheet-home.sass
+++ b/public/style/_timesheet-home.sass
@@ -2,6 +2,6 @@ form[name="timesheet"]
   table
     input[type="checkbox"]
       display: block
-      width: 100%
+      width: 34px
       height: 34px
       margin-top: -1px
