Added rate class back to CSS No idea how it got deleted.

--- a/public/style/_timesheet-admin.sass
+++ b/public/style/_timesheet-admin.sass
@@ -41,3 +41,5 @@
           .list-group-item
             border-width: 0px 1px 1px 1px
             border-radius: 0px
+            .rate
+              float: right
