--- a/public/style/style.sass
+++ b/public/style/style.sass
@@ -19,3 +19,14 @@ html
 body
   background-color: #eee
   margin-bottom: 60px
+
+.rate
+  display: inline-block
+  min-width: 10px
+  padding: 3px 7px
+  font-weight: bold
+  color: #090
+  line-height: 1
+  vertical-align: middle
+  white-space: nowrap
+  text-align: center
