--- a/public/style/_timesheet-admin.sass
+++ b/public/style/_timesheet-admin.sass
@@ -34,6 +34,7 @@
         .list-group
           border-color: #dddddd
           &:last-child
+            margin-bottom: 0
             .list-group-item:last-child
               border-bottom: 1px solid $list-group-border
               border-bottom-left-radius: $list-group-border-radius
