--- a/public/style/style.css
+++ b/public/style/style.css
@@ -23,10 +23,12 @@
       border-top-width: 0px; }
     #inner-panel #client-list .panel .panel-collapse .list-group {
       border-color: #dddddd; }
-      #inner-panel #client-list .panel .panel-collapse .list-group:last-child .list-group-item:last-child {
-        border-bottom: 1px solid #ddd;
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px; }
+      #inner-panel #client-list .panel .panel-collapse .list-group:last-child {
+        margin-bottom: 0; }
+        #inner-panel #client-list .panel .panel-collapse .list-group:last-child .list-group-item:last-child {
+          border-bottom: 1px solid #ddd;
+          border-bottom-left-radius: 4px;
+          border-bottom-right-radius: 4px; }
       #inner-panel #client-list .panel .panel-collapse .list-group .list-group-item {
         border-width: 0px 1px 1px 1px;
         border-radius: 0px; }
@@ -106,5 +108,8 @@ body {
   vertical-align: middle;
   white-space: nowrap;
   text-align: center; }
+
+form {
+  margin-bottom: 0; }
 
 /*# sourceMappingURL=style.css.map */
