Load and display project details in edit modal.

--- a/public/style/_timesheet-admin.sass
+++ b/public/style/_timesheet-admin.sass
@@ -44,3 +44,10 @@
             border-radius: 0px
             .rate
               float: right
+[data-del-id],[data-edit-id]
+  opacity: 0.5
+  &:hover
+    opacity: 1.0
+    cursor: pointer
+[data-del-id]
+  color: #f00
