Client update functionality completed.

--- a/public/style/_timesheet-admin.sass
+++ b/public/style/_timesheet-admin.sass
@@ -44,11 +44,13 @@
             border-radius: 0px
             .rate
               float: right
-[data-del-id],[data-edit-id]
+[data-edit-client],[data-del-id],[data-edit-id]
   opacity: 0.5
   &:hover
     opacity: 1.0
     cursor: pointer
+[data-edit-client]
+  padding-left: .3em
 [data-del-id]
   color: #f00
   padding-right: .3em
