--- a/public/style/style.css
+++ b/public/style/style.css
@@ -35,11 +35,14 @@
         #inner-panel #client-list .panel .panel-collapse .list-group .list-group-item .rate {
           float: right; }
 
-[data-del-id], [data-edit-id] {
+[data-edit-client], [data-del-id], [data-edit-id] {
   opacity: 0.5; }
-  [data-del-id]:hover, [data-edit-id]:hover {
+  [data-edit-client]:hover, [data-del-id]:hover, [data-edit-id]:hover {
     opacity: 1;
     cursor: pointer; }
+
+[data-edit-client] {
+  padding-left: 0.3em; }
 
 [data-del-id] {
   color: #f00;
