Add project to my list completed.

--- a/public/style/_timesheet-admin.sass
+++ b/public/style/_timesheet-admin.sass
@@ -44,7 +44,7 @@
             border-radius: 0px
             .rate
               float: right
-[data-edit-client],[data-del-id],[data-edit-id]
+[data-edit-client],[data-del-id],[data-edit-id],[data-addtomylist]
   opacity: 0.5
   &:hover
     opacity: 1.0
