--- a/public/style/_timesheet-admin.sass
+++ b/public/style/_timesheet-admin.sass
@@ -2,7 +2,7 @@
   border: 1px solid $table-border-color
   border-top: none
 
-  #client-list
+  #client-list,#my-client-list
     .panel
       border: none
       & + .panel
