--- a/public/style/_timesheet-admin.sass
+++ b/public/style/_timesheet-admin.sass
@@ -44,14 +44,14 @@
             border-radius: 0px
             .rate
               float: right
-[data-edit-client],[data-del-id],[data-edit-id],[data-addtomylist]
+[data-edit-client],[data-del-id],[data-edit-id],[data-addtomylist],[data-rem-mylist]
   opacity: 0.5
   &:hover
     opacity: 1.0
     cursor: pointer
 [data-edit-client]
   padding-left: .3em
-[data-del-id]
+[data-del-id],[data-rem-mylist]
   color: #f00
   padding-right: .3em
   padding-top: .1em
