--- a/public/style/datepicker.css
+++ b/public/style/datepicker.css
@@ -11,9 +11,9 @@
   left: 0;
   padding: 4px;
   margin-top: 1px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+  /*-webkit-border-radius: 4px;*/
+  /*-moz-border-radius: 4px;*/
+  /*border-radius: 4px;*/
   /*.dow {
     border-top: 1px solid #ddd !important;
   }*/
