--- a/public/style/style.css
+++ b/public/style/style.css
@@ -49,6 +49,12 @@
   padding-right: 0.3em;
   padding-top: 0.1em; }
 
+#line-entries .panel.panel-default input[type="checkbox"] {
+  display: block;
+  width: 100%;
+  height: 34px;
+  margin-top: -1px; }
+
 form[name="timesheet"] table input[type="checkbox"] {
   display: block;
   width: 34px;
