Designed existing entry table.

--- a/public/style/_timesheet-home.sass
+++ b/public/style/_timesheet-home.sass
@@ -12,3 +12,9 @@ form[name="timesheet"]
       width: 34px
       height: 34px
       margin-top: -1px
+#existing-entries
+  tbody
+    td
+      vertical-align: middle
+      &:nth-child(n+3)
+        text-align: center
