--- a/public/style/_timesheet-home.sass
+++ b/public/style/_timesheet-home.sass
@@ -1,10 +1,9 @@
-#line-entries
-  .panel.panel-default
-    input[type="checkbox"]
-      display: block
-      width: 100%
-      height: 34px
-      margin-top: -1px
+#line-entries .panel.panel-default,#modal-editlineitem .modal-body
+  input[type="checkbox"]
+    display: block
+    width: 100%
+    height: 34px
+    margin-top: -1px
 form[name="timesheet"]
   table
     input[type="checkbox"]
