Change project and client when sidebar project is clicked.

--- a/public/style/_timesheet-home.sass
+++ b/public/style/_timesheet-home.sass
@@ -17,3 +17,7 @@ form[name="timesheet"]
       vertical-align: middle
       &:nth-child(n+3)
         text-align: center
+#ActiveProjects
+  ul
+    li[data-pid]
+      cursor: pointer
