I think I've got the user submit and summary view complete.

--- a/public/style/style.sass
+++ b/public/style/style.sass
@@ -4,6 +4,7 @@
 @import "variables"
 @import "timesheet-admin"
 @import "timesheet-home"
+@import "timesheet-summary"
 @import "login"
 @import "header"
 @import "footer"
