--- a/public/style/style.css
+++ b/public/style/style.css
@@ -69,6 +69,9 @@ form[name="timesheet"] table input[type="checkbox"] {
 #ActiveProjects ul li[data-pid] {
   cursor: pointer; }
 
+#TimeSheetSummary table.table td {
+  vertical-align: middle; }
+
 /* Signin */
 .signin {
   float: right; }
