--- a/public/style/main.css
+++ b/public/style/main.css
@@ -4,6 +4,8 @@
     color: #00b3ee; }
   .glyphicon.glyphicon-edit {
     color: #d58512; }
+  .glyphicon.glyphicon-remove-circle {
+    color: #f00; }
 
 .glyphicon-record, .glyphicon-ok-sign {
   cursor: default; }
