--- a/public/style/main.sass
+++ b/public/style/main.sass
@@ -4,6 +4,8 @@
     color: #00b3ee
   &.glyphicon-edit
     color: #d58512
+  &.glyphicon-remove-circle
+    color: #f00
 .glyphicon-record,.glyphicon-ok-sign
   cursor: default
 [data-item-id]
