TimeSheet Summary CSS

--- a/public/style/_timesheet-summary.sass
+++ b/public/style/_timesheet-summary.sass
@@ -16,3 +16,8 @@
     font-weight: bold
   .project
     padding-left: 30px
+  table
+    thead
+      th
+        &:first-child,&:nth-child(n+3)
+          width: 1%
