Added admin page

--- a/public/style/style.sass
+++ b/public/style/style.sass
@@ -4,6 +4,7 @@
 @import "variables"
 @import "buttons"
 @import "timesheet-admin"
+@import "timesheet-database"
 @import "timesheet-home"
 @import "timesheet-summary"
 @import "login"
