--- a/public/style/_timesheet-database.sass
+++ b/public/style/_timesheet-database.sass
@@ -3,6 +3,8 @@
   border-top: none
 
   #client-list,#my-client-list
+    max-height: 320px
+    overflow-y: auto
     .panel
       border: none
       & + .panel
