Added new button (michric button [btn-limegreen])

--- a/public/style/_buttons.sass
+++ b/public/style/_buttons.sass
@@ -1,2 +1,5 @@
 .btn-secondary
- @include button-variant($btn-secondary-color, $btn-secondary-bg, $btn-secondary-border)
+  @include button-variant($btn-secondary-color, $btn-secondary-bg, $btn-secondary-border)
+
+.btn-limegreen
+  @include button-variant($btn-limegreen-color, $btn-limegreen-bg, $btn-limegreen-border)
