--- a/public/style/_variables.sass
+++ b/public/style/_variables.sass
@@ -20,7 +20,7 @@ $brand-info:            #5bc0de
 $brand-warning:         #f0ad4e
 $brand-danger:          #d9534f
 $brand-secondary:       #2c3692
-
+$brand-limegreen:         #90C140
 
 //== Scaffolding
 //
@@ -172,6 +172,10 @@ $btn-danger-border:              darken($btn-danger-bg, 5%)
 $btn-secondary-color:            #fff
 $btn-secondary-bg:               $brand-secondary
 $btn-secondary-border:           darken($btn-secondary-bg, 5%)
+
+$btn-limegreen-color:            #fff
+$btn-limegreen-bg:               $brand-limegreen
+$btn-limegreen-border:           darken($btn-limegreen-bg, 5%)
 
 $btn-link-disabled-color:        $gray-light
 
