Generate new worksheets for every client.

--- a/public/style/bootstrap-scss/bootstrap/_variables.scss
+++ b/public/style/bootstrap-scss/bootstrap/_variables.scss
@@ -21,6 +21,11 @@ $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
 
+$brand-limegreen:         #90C140;
+$panel-limegreen-text:          #fff;
+$panel-limegreen-border:        $brand-limegreen;
+$panel-limegreen-heading-bg:    $brand-limegreen;
+
 
 //== Scaffolding
 //
