--- a/public/style/bootstrap-scss/bootstrap/_panels.scss
+++ b/public/style/bootstrap-scss/bootstrap/_panels.scss
@@ -269,3 +269,6 @@
 .panel-danger {
   @include panel-variant($panel-danger-border, $panel-danger-text, $panel-danger-heading-bg, $panel-danger-border);
 }
+.panel-limegreen {
+  @include panel-variant($panel-limegreen-border, $panel-limegreen-text, $panel-limegreen-heading-bg, $panel-limegreen-border);
+}
