Added panel box-shadow

--- a/public/style/_timesheet-home.sass
+++ b/public/style/_timesheet-home.sass
@@ -1,3 +1,8 @@
+.panel
+  -webkit-box-shadow: 4px 4px 4px #ddd
+  -moz-box-shadow: 4px 4px 4px #ddd
+  box-shadow: 4px 4px 4px #ddd
+
 #line-entries .panel.panel-default,#modal-editlineitem .modal-body
   input[type="checkbox"]
     display: block
